# bookwords

./: .pre-commit-config.yaml  main.py  pyproject.toml
src/: config.py
src/core/: statistics.py
src/file/: __init__.py  parsers.py  reader.py
src/models/: book.py  stats.py
src/parsers/: html_parsers.py
src/processing/: analyzer.py  processor.py  tokenizer.py
src/readers/: epub_readers.py
src/utils/: exceptions.py
tests/file/: test_parser.py  test_readers.py
tests/parsers/: test_bs_parser.py
tests/processing/: test_analyzer.py  test_processor.py  test_tokenizer.py
tests/readers/: test_epub_reader.py
